[gd_scene load_steps=13 format=4 uid="uid://duhc4lbuwixkw"]

[ext_resource type="PackedScene" uid="uid://c2wrkbn4nt8qh" path="res://TileMaps/dungeon-01.tscn" id="1_d43d1"]
[ext_resource type="Script" uid="uid://pqnevaab2b1r" path="res://TitleScene/title_scene.gd" id="1_r4cus"]
[ext_resource type="AudioStream" uid="uid://dfvvcjerh7rih" path="res://TitleScene/Audio/waves.mp3" id="2_75f4d"]
[ext_resource type="PackedScene" uid="uid://kjglmwbvfil8" path="res://Interactables/Dungeon/PushableStatue/pushable_statue.tscn" id="2_cydky"]
[ext_resource type="AudioStream" uid="uid://b8mo35psy3oxd" path="res://TitleScene/Audio/menu_focus.wav" id="3_0vy3h"]
[ext_resource type="Texture2D" uid="uid://bhn1ttexvuaqv" path="res://TitleScene/Sprites/title.png" id="3_cydky"]
[ext_resource type="AudioStream" uid="uid://c63adp3pgtot" path="res://TitleScene/Audio/menu_select.wav" id="4_yo02d"]
[ext_resource type="PackedScene" uid="uid://bn6m1d1rmbcu5" path="res://Levels/player_spawn.tscn" id="5_2ubs0"]
[ext_resource type="PackedScene" uid="uid://gt6cd018v5jf" path="res://TitleScene/splash_scene.tscn" id="8_0vy3h"]

[sub_resource type="Animation" id="Animation_cydky"]
resource_name = "default"
length = 5.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_r4cus"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r4cus"]
_data = {
&"RESET": SubResource("Animation_r4cus"),
&"default": SubResource("Animation_cydky")
}

[node name="TitleScene" type="Node2D"]
script = ExtResource("1_r4cus")
music = ExtResource("2_75f4d")
button_focus_audio = ExtResource("3_0vy3h")
button_press_audio = ExtResource("4_yo02d")

[node name="Dungeon01" parent="." instance=ExtResource("1_d43d1")]
z_index = -1
tile_map_data = PackedByteArray("AAAAAP//AQAIAAcAAAAAAAAAAQAIAAcAAAAAAAEAAQAIAAcAAAABAP//AQAIAAcAAAABAAAAAQAJAAAAAAABAAEAAQAJAAEAAAACAP//AQAIAAcAAAACAAAAAQAKAAAAAAACAAEAAQAKAAEAAAABAAIAAQAJAAIAAAACAAIAAQAKAAIAAAADAAAAAQALAAAAAAADAAEAAQALAAEAAAADAAIAAQALAAIAAAAEAAAAAQAEAAUAAAAEAAEAAQAEAAYAAAAEAAIAAQAEAAcAAAAFAAAAAQAHAAUAAAAFAAEAAQAHAAYAAAAFAAIAAQAHAAcAAAABAAMAAQADAAQAAAACAAMAAQAKAAMAAAADAAMAAQALAAMAAAADAP//AQAIAAcAAAAEAP//AQAIAAcAAAAFAP//AQAIAAcAAAAGAP//AQAIAAcAAAAHAP//AQAIAAcAAAAIAP//AQAIAAcAAAAJAP//AQAIAAcAAAAKAP//AQAIAAcAAAALAP//AQAIAAcAAAAMAP//AQAIAAcAAAAEAAMAAQAAAAAAAAAFAAMAAQABAAAAAAAGAAMAAQACAAAAAAAHAAMAAQAAAAAAAAAIAAMAAQABAAAAAAAJAAMAAQACAAAAAAAKAAMAAQADAAAAAAALAAAAAQANAAAAAAALAAEAAQANAAEAAAALAAIAAQANAAIAAAAMAAAAAQAOAAAAAAAMAAEAAQAOAAEAAAAMAAIAAQAOAAIAAAANAAAAAQAPAAAAAAANAAEAAQAPAAEAAAANAAIAAQAPAAIAAAAKAAAAAQAHAAUAAAAKAAEAAQAHAAYAAAAKAAIAAQAHAAcAAAAJAAAAAQAEAAUAAAAJAAEAAQAEAAYAAAAJAAIAAQAEAAcAAAAGAAAAAQAMAAAAAAAGAAEAAQAMAAEAAAAGAAIAAQAMAAIAAAAHAAAAAQAMAAAAAAAHAAEAAQAMAAEAAAAHAAIAAQAMAAIAAAAIAAAAAQAMAAAAAAAIAAEAAQAMAAEAAAAIAAIAAQAMAAIAAAALAAMAAQANAAMAAAAMAAMAAQAOAAMAAAANAAMAAQACAAQAAAALAAQAAQAEAAMAAAALAAUAAQAEAAQAAAAMAAQAAQAFAAMAAAAMAAUAAQAFAAQAAAANAAQAAQAGAAMAAAANAAUAAQAGAAQAAAAOAAMAAQAEAAUAAAAOAAQAAQAEAAYAAAAOAAUAAQAEAAcAAAAPAAMAAQAHAAUAAAAPAAQAAQAHAAYAAAAPAAUAAQAHAAcAAAACAAQAAQAHAAMAAAACAAUAAQAHAAQAAAADAAQAAQAIAAMAAAADAAUAAQAIAAQAAAABAAQAAQAGAAMAAAABAAUAAQAGAAQAAAAAAAMAAQAHAAUAAAAAAAQAAQAHAAYAAAAAAAUAAQAHAAcAAAD//wMAAQAEAAUAAAD//wQAAQAEAAYAAAD//wUAAQAEAAcAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAEAAAAEAAYAAQAAAAEAAAAFAAQAAQABAAAAAAAFAAUAAQABAAEAAAAFAAYAAQABAAEAAAAGAAQAAQACAAAAAAAGAAUAAQACAAEAAAAGAAYAAQACAAEAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAEAAAAHAAYAAQADAAEAAAAIAAQAAQABAAAAAAAIAAUAAQABAAEAAAAIAAYAAQAAAAEAAAAJAAQAAQACAAAAAAAJAAUAAQACAAEAAAAJAAYAAQABAAEAAAAKAAQAAQADAAAAAAAKAAUAAQADAAEAAAAKAAYAAQACAAEAAAD//wYAAQAAAAAAAAD//wcAAQAAAAEAAAAAAAYAAQAAAAEAAAAAAAcAAQAAAAIAAAABAAYAAQABAAEAAAABAAcAAQABAAIAAAACAAYAAQACAAEAAAACAAcAAQACAAIAAAAMAAYAAQAAAAAAAAAMAAcAAQAAAAEAAAANAAYAAQABAAAAAAANAAcAAQABAAEAAAAOAAYAAQACAAAAAAAOAAcAAQACAAEAAAAPAAYAAQADAAAAAAAPAAcAAQADAAEAAAD//wgAAQAAAAcAAAD//wkAAQAIAAYAAAAAAAgAAQADAAcAAAAAAAkAAQAIAAYAAAAEAAcAAQAAAAIAAAAFAAcAAQABAAIAAAAGAAcAAQACAAIAAAAHAAcAAQADAAIAAAADAAYAAQADAAEAAAADAAcAAQADAAIAAAAIAAcAAQAAAAIAAAAJAAcAAQABAAIAAAAKAAcAAQACAAIAAAALAAYAAQADAAEAAAALAAcAAQADAAIAAAAEAAgAAQAAAAcAAAAJAAgAAQAAAAcAAAAOAAgAAQAAAAcAAAAFAAgAAQADAAcAAAAKAAgAAQADAAcAAAAPAAgAAQADAAcAAAABAAgAAQAMAAYAAAABAAkAAQAMAAcAAAACAAgAAQAMAAYAAAACAAkAAQAMAAcAAAADAAgAAQAMAAYAAAADAAkAAQAMAAcAAAAGAAgAAQAMAAYAAAAGAAkAAQAJAAcAAAAHAAgAAQAMAAYAAAAHAAkAAQAJAAcAAAAIAAgAAQAMAAYAAAAIAAkAAQAJAAcAAAALAAgAAQAMAAYAAAALAAkAAQAJAAcAAAAMAAgAAQAMAAYAAAAMAAkAAQAJAAcAAAANAAgAAQAMAAYAAAANAAkAAQAJAAcAAAAEAAkAAQAJAAcAAAAFAAkAAQAJAAcAAAAJAAkAAQAJAAcAAAAKAAkAAQAJAAcAAAAOAAkAAQAJAAcAAAAPAAkAAQAJAAcAAAAAAAIAAQAJAAcAAAD//wIAAQAJAAcAAAD//wEAAQAJAAcAAAD//wAAAQAJAAcAAAD/////AQAJAAcAAAANAP//AQAJAAcAAAAOAP//AQAJAAcAAAAPAP//AQAJAAcAAAAPAAAAAQAJAAcAAAAPAAEAAQAJAAcAAAAPAAIAAQAJAAcAAAAOAAIAAQAJAAcAAAAOAAEAAQAJAAcAAAAOAAAAAQAJAAcAAAA=")

[node name="Props" type="Node" parent="."]

[node name="PushableStatue" parent="Props" instance=ExtResource("2_cydky")]
position = Vector2(63, 200)

[node name="PushableStatue2" parent="Props" instance=ExtResource("2_cydky")]
position = Vector2(415, 200)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control"]
position = Vector2(244, 112)
texture = ExtResource("3_cydky")
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_r4cus")
}
autoplay = "default"

[node name="ButtonNew" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 189.0
offset_top = 171.0
offset_right = 292.0
offset_bottom = 197.0
text = "New Game"

[node name="ButtonContinue" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 189.0
offset_top = 205.0
offset_right = 292.0
offset_bottom = 231.0
text = "Contioue"

[node name="SplashScene" parent="CanvasLayer" instance=ExtResource("8_0vy3h")]

[node name="PlayerSpawn" parent="." instance=ExtResource("5_2ubs0")]
position = Vector2(240, 144)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 4
